--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,20 +2,8 @@ project:
   type: website
 
 website:
-  title: "S&DS-3610-PSET-1"
+  title: "S&DS 3610 PSET 1"
   navbar:
     left:
-      - href: index.qmd
-        text: Home
-      - about.qmd
-
-format:
-  html:
-    theme:
-      - cosmo
-      - brand
-    css: styles.css
-    toc: true
-
-
-
+      - text: "Home"
+        href: index.qmd
